# forge

./: .env.example  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .shellcheckrc  .yamllint.yml  CHANGELOG.md  LICENSE  Makefile  PLAN.md  README.md  forge  plan.md  pyproject.toml  setup.sh
.claude-plugin/: plugin.json
.claude/commands/: forge-ask.md  forge-cost.md  forge-guide.md  forge-init.md  forge-mode.md  forge-snapshot.md  forge-start.md  forge-status.md  forge-stop.md  forge-strategy.md  forge-team.md
.github/workflows/: ci.yml  release.yml
agents/: _base-agent.md  architect.md  backend-developer.md  critic.md  devops-specialist.md  documentation-specialist.md  frontend-designer.md  frontend-developer.md  frontend-engineer.md  performance-engineer.md  qa-engineer.md  research-strategist.md  researcher.md  security-tester.md  strategist.md  team-leader.md
config/: project-requirements.md  team-config.example.yaml  team-config.yaml
docs/: AGENT-PROTOCOL.md  ARCHITECTURE.md  COCKPIT.md  CONTRIBUTING.md  EXAMPLES.md  HOMEBREW.md  PLUGIN.md  TESTING-MANUAL.md  e2e-feedback-log.md
examples/: forge-config.yaml
forge_cli/: __init__.py  checkpoint.py  config_loader.py  config_schema.py  init_wizard.py  main.py  models.py  progress.py  session.py  tokens.py  wizard.py
forge_cli/evals/: __init__.py  benchmark.py  description_optimizer.py  eval_cases.py  eval_runner.py  grading.py
forge_cli/generators/: __init__.py  agent_files.py  claude_md.py  context_summarizer.py  hooks.py  mcp_config.py  orchestrator.py  refinement.py  settings_config.py  skills.py  team_init_plan.py
homebrew/: forge-init.rb
scripts/: broadcast.sh  change-mode.sh  change-strategy.sh  check_per_file_coverage.py  cost-tracker.sh  generate-claude-md.sh  init-project.sh  kill-agent.sh  log-aggregator.sh  nl-router.sh  resolve-forge-dir.sh  resume.sh  spawn-agent.sh  start.sh  status.sh  stop.sh  team-view.sh  watchdog.sh
scripts/cockpit/: activity-feed.sh  agent-grid.sh  dashboard.sh  metrics-panel.sh  render.sh
skills/ask/: SKILL.md
skills/cost/: SKILL.md
skills/forge/: SKILL.md
skills/guide/: SKILL.md
skills/init/: SKILL.md
skills/mode/: SKILL.md
skills/snapshot/: SKILL.md
skills/start/: SKILL.md
skills/status/: SKILL.md
skills/stop/: SKILL.md
skills/strategy/: SKILL.md
skills/team/: SKILL.md
templates/: _template-manifest.yaml
tests/: conftest.py  test_checkpoint.py  test_checkpoint_hierarchy.py  test_checkpoint_skill.py  test_cli_checkpoint_commands.py  test_co_planner.py  test_config_loader.py  test_config_schema.py  test_context_compaction.py  test_context_quality.py  test_context_summarizer.py  test_deterministic_resume.py  test_eval_benchmark.py  test_eval_runner.py  test_event_inbox.py  test_forge_quality.py  test_generators.py  test_ghost_detection.py  test_init_wizard.py  test_integration.py  test_main.py  test_progress.py  test_refinement.py  test_session.py  test_tokens.py
tests/e2e/: __init__.py  checkpoint_validator.py  conftest.py  feedback_collector.py  improvement_runner.py  test_scenario_01_explicit_stop.py  test_scenario_02_terminal_close.py  test_scenario_03_sigkill.py  test_scenario_04_context_limit.py  (+21 more)
(+243 files in other folders)
