[project]
name = "forge-init"
version = "2.0.0"
description = "Project initialization tool that generates agent instruction files for Claude Code CLI teams"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Rushabh Thakkar"}
]
keywords = ["claude", "agents", "project-init", "cli", "ai-development"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "pydantic>=2.0",
    "questionary>=2.0",
]

[project.scripts]
forge = "forge_cli.main:cli"

[project.urls]
Homepage = "https://github.com/Rushabh1798/forge"
Repository = "https://github.com/Rushabh1798/forge"
Issues = "https://github.com/Rushabh1798/forge/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["forge_cli"]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "anthropic>=0.40",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
